inventory-wildfly-swarm/xebialabs/package/service-inventory-postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    application: coolstore
    component: inventory
  name: inventory-postgresql
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    deploymentconfig: inventory-postgresql
