inventory-wildfly-swarm/xebialabs/package/route-inventory.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    application: coolstore
    component: inventory
  name: inventory
spec:
  to:
    kind: Service
    name: inventory
    weight: 100
